[package]
name = "wasi-code-executor"
version = "0.1.0"
edition = "2021"
description = "HTTP service for executing Python/JS/Ruby code in WASI sandboxes with cross-language function calls"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "17.0", features = ["async", "cranelift"] }
wasmtime-wasi = { version = "17.0" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
bytes = "1.5"
futures = "0.3"
once_cell = "1.19"
url = "2.5"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
